# ArcScript

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_NOTES.txt  README.md  test.ps1  test.sh
.github/workflows/: rust.yml
docs/: ArcScript_Guide.txt
examples/: advanced.arc  basic.arc  builtins.arc  closures.arc  control_flow.arc  loops.arc  math.arc  operators.arc  strings.arc  tables_objects.arc
spec/: grammar.ebnf
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
