[package]
name = "arcscript"
version = "1.0.0"
edition = "2021"
authors = ["Vasileios Petropoulos"]
description = "A domain-specific scripting language for game logic and interactive applications"
license = "MIT"
repository = "https://github.com/anubisjh/ArcScript"
keywords = ["scripting", "game-dev", "interpreter", "language"]
categories = ["game-development", "parser-implementations"]

[[bin]]
name = "arcscript"
path = "src/main.rs"

[dependencies]
